fixed the ugly line butts sticking out of the axis line

--- a/src/components/_gapminder/line-chart/_line-chart.scss
+++ b/src/components/_gapminder/line-chart/_line-chart.scss
@@ -36,12 +36,12 @@
     .vzb-lc-line {
         fill: none;
         stroke-width: 11px;
-        stroke-linecap: round;
+        stroke-linecap: butt;
     }
     .vzb-lc-line-shadow {
         fill: none;
         stroke-width: 14px;
-        stroke-linecap: round;
+        stroke-linecap: butt;
     }
     .vzb-lc-circle {
         stroke-width: 3px
